--- a/index.html
+++ b/index.html
@@ -13,17 +13,17 @@
             <i class="fas fa-wifi"></i>
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>19:03</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
+            <span>100%</span>
             <i class="fas fa-battery-full fa-lg"></i>
             <i class="fas fa-bolt"></i>
         </div>
     </div>
-
+    
     <header class="welcome-header">
-        <h1 class="welcome-header__title">Welcome to Kakao Clone</h1>
+        <h1 class="welcome-header__title">Welcome Kakao Talk</h1>
         <p class="welcome-header__text">
             If you have a Kakao Account, log in with your email or phone number.
         </p>
@@ -43,5 +43,6 @@
 </body>
 </html>
 <!--
-    heroicons , fontawesome, google fonts
+    heroicons , fontawesome, google fonts,
+    reset css
 -->
